# multicloud-governance-platform

./: .checkov.yml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .tfsec.yml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  terragrunt.hcl
.devcontainer/: README.md  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: aws-private-gateway-image.sh  aws-private-rds-schemas.sh  aws-rds-task.sh  azure-sql-gateway-image.sh  azure-sql-schemas.sh  azure-sql-task.sh  drain-endpoint-service.sh  gcp-bq-gateway-image.sh
.github/workflows/: dbx-bootstrap.yml  dbx-config-validate.yml  dbx-deploy.yml  dbx-destroy.yml  dbx-drift.yml  dbx-genie.yml  dbx-pipeline.yml  dbx-validate.yml  dependabot-auto-merge.yml  gitleaks.yml  pages.yml  sbom.yml
actions/govgate/: README.md  action.yml
docker/bq-gateway/: Dockerfile  entrypoint.sh
docker/rds-gateway/: Dockerfile  entrypoint.sh
docker/sql-gateway/: Dockerfile  entrypoint.sh
docs/: LIVE_RUN_RUNBOOK.md  SETUP_LIVE.md  TESTING.md
docs/adr/: 0000-template.md  0001-terragrunt-over-custom-orchestrator.md  0002-secrets-via-run-cmd-at-plan-time.md  0003-single-phase-iam-static-external-id.md  0004-remote-state-s3-dynamodb.md  0005-generated-providers.md  0006-zero-python-domain-governance.md  0007-deterministic-governance-bounded-llm.md  (+10 more)
pipelines/: README.md  generate_data.py  medallion.py  profile_data.py
promo/: 00_master_plan.md  01_caption_script_hero.md  02_shot_list.md  03_capture_recipe.md  04_deep_dive_plan.md  PROMO-PRODUCTION-GUIDE.md
schema/: README.md  domain.grants.schema.json  domain.infra.schema.json
scripts/: catalog_drift.py  cost_estimate.py  gate_demo.py  gate_green.py  gate_proof.py  genie_space.py  governance_dashboard.py  governance_metrics.py  governance_model.py  governance_report.py  lint_workflows.py  policy_analyzer.py  snowflake_backend.py  validate_domains.py
tests/: conftest.py  test_catalog_drift.py  test_cost_estimate.py  test_golden_policy.py  test_governance_dashboard.py  test_governance_metrics.py  test_governance_model.py  test_governance_report.py  test_opa_consistency.py  test_pipelines.py  test_policy_analyzer.py  test_policy_outputs.py  test_schema_validation.py  test_snowflake_backend.py  test_snowflake_terraform.py  test_validate_domains.py
(+454 files in other folders)
