# Dev/test-only Python configuration.
#
# This project ships NO Python application logic — its behaviour lives in the
# domain governance JSON under environments/dev/domains/. The Python here is a
# pre-flight CONFIG VALIDATOR (scripts/validate_domains.py) and its tests only.
# It is never invoked by the Terraform/Terragrunt apply path. See docs/TESTING.md.

[project]
name = "govgate"
version = "0.2.0"
description = "Engine-agnostic governance gate: fail a PR on least-privilege / PII violations in Unity Catalog & Snowflake domain grants (SARIF)."
requires-python = ">=3.9"

# The deterministic access-policy analyzer, packaged as an installable CLI + GitHub Action
# (actions/govgate). Point it at any repo's environments/*/domains grants JSON; it emits
# text / JSON / SARIF and exits non-zero on an unacknowledged HIGH finding. The stdlib-only
# design means zero runtime dependencies. See docs/adr/0012-govgate-packaging.md.
[project.scripts]
govgate = "policy_analyzer:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# The gate is three flat modules under scripts/ (analyzer + model parser + config validator).
py-modules = ["policy_analyzer", "governance_model", "validate_domains"]

[tool.setuptools.package-dir]
"" = "scripts"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "-ra"

[tool.ruff]
line-length = 140
target-version = "py39"
src = ["scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
